# 1337-lang

./: .gitignore  .leet_cache.db  05_e2e_tests.md  06_network.md  1337_spec_v0.4.docx  CONTRACT.md  Dockerfile  README.md  TESTING.md  build.sh  comparison_1337_vs_english.py  compression_analysis.py  delta_compression.py  demo_auto.sh  demo_log.json  demo_log_1774512078.json  demonstrar_compressao.py  docker-compose.yml  dual_book_delta.py  dual_book_report_1774512131.json  dual_book_simulation.py  dual_delta_report_1774509759.json  dual_delta_report_1774509768.json  integration_test.py  medir_janela.py  net1337.py  plato_1337_report_1774503866.json  plato_1337_report_1774505204.json  plato_1337_report_1774505717.json  plato_1337_report_1774839777.json  plato_discussion.py  run_demo.sh  setup.py  test_all.sh  test_api.py
1337-lang/: SKILL.md
1337-lang/references/: axes-reference.md  rust-implementation-guide.md  spec-v0.4-compact.md
calibration/: README.md  evaluate_w.py  export_w.py  generate_dataset.py  generate_dataset_v2.py  requirements.txt  train_w.py
calibration/data/: W.npy  dataset.jsonl  seed_texts.txt
calibration/sources/: __init__.py  aggregator.py  apis.py  base.py  domain.py  local.py  synthetic.py  test_sources.py
comparison_reports/: comparison_1774839407.json  comparison_1774839417.json  comparison_1774839442.json  comparison_1774839450.json  comparison_1774839467.json  comparison_1774839764.json  comparison_1774839883.json  comparison_1774839952.json  comparison_1774839962.json  comparison_1774842690.json  comparison_1774842733.json  comparison_1774843081.json  comparison_1774843771.json  comparison_1774844090.json
leet-py/: pyproject.toml
leet-py/leet/: __init__.py  agent.py  client.py  network.py  providers.py  response.py  stats.py
leet-py/tests/: test_client.py  test_network.py  test_providers.py
leet-vm/: pyproject.toml
leet-vm/leet_vm/: __init__.py  types.py  vm.py
leet-vm/leet_vm/adapters/: __init__.py  base.py  json_rpc.py  mcp.py  registry.py  rest.py  text.py
leet-vm/leet_vm/projector/: __init__.py  base.py  local.py  service.py
leet-vm/leet_vm/runtime/: __init__.py  handshake.py  router.py  surface.py
leet-vm/leet_vm/store/: __init__.py  personal.py  session.py
leet-vm/tests/: conftest.py  test_adapters.py  test_projector.py  test_store.py  test_vm.py
leet1337/: Cargo.toml
leet1337/leet-bridge/: Cargo.toml
leet1337/leet-bridge/src/: error.rs  human_to_1337.rs  leet_to_human.rs  lib.rs  projector.rs
leet1337/leet-cli/: Cargo.toml
leet1337/leet-cli/src/: main.rs
leet1337/leet-cli/src/commands/: axes.rs  bench.rs  decode.rs  dist.rs  encode.rs  health.rs  inspect.rs  mod.rs  version.rs
leet1337/leet-core/: Cargo.toml
leet1337/leet-core/src/: axes.rs  error.rs  ffi.rs  lib.rs  operators.rs  python.rs  types.rs  validate.rs  wire.rs
leet1337/leet-service/: Cargo.toml  Dockerfile  build.rs
leet1337/leet-service/proto/: leet.proto
leet1337/leet-service/src/: config.rs  lib.rs  main.rs
leet1337/leet-service/src/c5/: handshake.rs  mod.rs
leet1337/leet-service/src/projection/: batch.rs  embed.rs  engine.rs  matrix.rs  mod.rs
leet1337/leet-service/src/server/: mod.rs
leet1337/leet-service/src/store/: mod.rs
leet1337/leet-service/src/transport/: mod.rs  zmq.rs
leet1337/leet-service/tests/: integration_test.rs
md/: 01_skill.md  02_rust_core.md  03_bridge.md  04_python.md  BRANCH_V05_PLAN.md  COMPARISON_README.md  COMPARISON_SUMMARY.md  CONTEXT_AND_TRAINING.md  DEMO_DUAL.md  DOCS.md  GUIDE.md  PHASE2.md  PHASE3_IDE_ADAPTERS.md  PROMPT_02_leet_service.md  PROMPT_03_leet_vm.md  PROMPT_04_leet_py.md  PROMPT_05_leet_cli.md  PROMPT_06_calibration.md  SDK_STATUS.md  compression_theory.md
prompts/: CONTRACT.md  PROMPT_00_git_setup.md  PROMPT_01_foundation.md  PROMPT_02_leet_service.md  PROMPT_03_leet_vm.md  PROMPT_04_leet_py.md  PROMPT_05_leet_cli.md  PROMPT_06_calibration.md  README.md  run.sh
python/: pyproject.toml
python/leet/: __init__.py  axes.py  batch.py  bridge.py  cache.py  cli.py  config.py  context.py  metrics.py  operators.py  types.py  validate.py
python/leet/adapters/: __init__.py  aider.py  base.py  claude_code.py  cli.py  codex.py  kimi.py
python/leet/client/: __init__.py  agent.py  grpc_client.py  pool.py  resilient_client.py  websocket_client.py  zmq_client.py
python/leet/proto/: __init__.py  leet_pb2.py  leet_pb2_grpc.py
python/tests/: __init__.py  test_adapters.py  test_bridge.py  test_cli.py  test_context.py  test_e2e.py  test_operators.py  test_sdk_integration.py  test_types.py  test_validate.py
