[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "leet-vm>=0.1.0",
    "openai>=1.12",
    "anthropic>=0.20",
    "httpx>=0.27",
    "pydantic>=2.5",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
service = ["grpcio>=1.60"]
dev     = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
