[project]
name = "leet1337"
version = "0.4.0"
description = "1337 inter-agent communication language — Python SDK"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8", "pytest-asyncio"]

[project.scripts]
leet = "leet.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["leet*"]
