[package]
name = "leet_bridge"
version = "0.4.0"
edition = "2021"

[dependencies]
leet_core = { path = "../leet-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"], optional = true }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
tokio-runtime = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
