[package]
name = "leet_core"
version = "0.4.0"
edition = "2021"

[lib]
name = "leet_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
