[package]
name = "leet-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "leet_service"
path = "src/lib.rs"

[[bin]]
name = "leet-service"
path = "src/main.rs"

[dependencies]
leet_core = { path = "../leet-core" }
zmq = "0.10"
chrono = "0.4"
serde_bytes = "0.11"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ndarray = { version = "0.15", features = ["rayon"] }
lru = "0.12"
rmp-serde = "1"
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
bytes = "1"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
futures-core = "0.3"

[dev-dependencies]
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.11"
